--- a/src/main/webapp/style/default.css
+++ b/src/main/webapp/style/default.css
@@ -50,4 +50,11 @@ div#menu {
   float: right;
 }
 
+button.forgeCommand {
+  background: url(forge-icon.png) top left no-repeat;
+  border: 0px;
+  padding: 0px;
+  width: 20px;
+  height: 20px;
+}
 
