--- a/src/main/webapp/style/default.css
+++ b/src/main/webapp/style/default.css
@@ -22,15 +22,17 @@ h2 {
 
 body { 
   margin:0px;
-  background: url(page_background.png) top left repeat-x;
   background-color: #ffffff;
-  font-family: helvetica, arial, verdana, sans-serif;
   font-size: 1em;
-  color: #000000;
+  color: #777;
 }
 
 .header {
   height: 40px;
+}
+
+.buttonBar {
+  float: right;
 }
 
 #logo {
@@ -52,21 +54,39 @@ div#menu {
   float: right;
 }
 
-div.forgeUI div {
-  height: 24px;
-  vertical-align: middle;
-  clear: both;
+/* Command UI popup window styles */
+
+.forgeUI {
+  background-color: #ffffff;
+  overflow: auto;
+  position: absolute;
+  top: 32px;
+  bottom: 42px;
+  width: 100%; 
 }
 
-div.forgeUI label {
-  float: left;
-  width: 160px;
-  text-align: right;
+.forgeUI label {
   font-size: 75%;
 }
 
-div.forgeUI input {
-  float: left;
+.popupFooter {
+  position: absolute;
+  border-top: 1px solid #999999;
+  background-color: #777;
+  bottom: 0px;
+  height: 42px;
+  width: 100%;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+  -moz-bottom-left-border-radius: 8px;
+  -moz-bottom-right-border-radius: 8px;
+  -webkit-bottom-left-border-radius: 8px;
+  -webkit-bottom-right-border-radius: 8px;
+}
+
+.popupFooter button {
+  margin-right: 12px;
+  margin-top: 4px;
 }
 
 div.xwPopupBackground {
@@ -77,19 +97,33 @@ div.xwPopupBackground {
 }
 
 div.xwPopupWindow  {
-  border: 2px solid #4c4c4c;
+  border: 2px solid #777;
   -webkit-border-radius:12px;
   -moz-border-radius:12px;
   border-radius:12px;
-  padding: 6px;
+  padding: 0px;
+}
+
+div.xwPopupContent {
+  
+
 }
 
 div.xwPopupTitle {
   font-size: 20px;
-  margin-top: 2px;
-  margin-bottom: 6px;
-  color: #653c1b;  
+  color: #ffffff;  
+  background-color: #777;
   font-weight: normal;
+  padding: 4px;
+  border-bottom: 1px solid #999999;
+  height: 32px;
+  
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  -moz-top-left-border-radius: 8px;
+  -moz-top-right-border-radius: 8px;
+  -webkit-top-left-border-radius: 8px;
+  -webkit-top-right-border-radius: 8px;  
 }
 
 div.xwPopupCloseButton {
