--- a/src/main/webapp/style/menu.css
+++ b/src/main/webapp/style/menu.css
@@ -11,17 +11,18 @@ div.xw_menubar {
 div.xw_menuitem {
   float: left;
   border: 1px solid transparent;
-  padding: 1px 4px 1px 4px;
+  padding: 1px 2px 1px 2px;
   margin-right: 4px;  
   font-size: 85%;
 }
 
 div.xw_menuitem_selected {
   float: left;
-  border: 1px solid #f00;
-  padding: 1px 4px 1px 4px;
+  border: 1px solid #009;
+  padding: 1px 2px 1px 2px;
   margin-right: 4px; 
-  background-color: #ddf;
+  background: rgba(120,120,255,0.2);
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#337878ff,endColorstr=#337878ff);
   cursor: pointer;
   font-size: 85%;
 }
@@ -32,13 +33,16 @@ div.xw_menuitem i {
 
 div.xw_menuitem:hover {
   border: 1px solid #009;
-  background-color: #ddf;
+  background: rgba(120,120,255,0.2);
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#337878ff,endColorstr=#337878ff);
   cursor: pointer;
+
 }
 
 div.xw_submenu {
-  background-color: #eeeeee;  
-  padding: 1px 4px 1px 4px;
+  background: url(submenu-bg.png) top left repeat-y;
+  background-color: #f2f2f2;
+  padding: 1px 1px 1px 1px;
   outline: 1px solid #ddd;
   border-top: 1px solid #fff;
   box-shadow: 6px 6px 3px #888888;
@@ -46,5 +50,10 @@ div.xw_submenu {
 
 div.xw_submenu div {
   float: none;
-  margin-left: 24px;
+  margin-left: 0px;
+  padding-left: 32px;
+}
+
+div.xw_submenu div i {
+  float: right;
 }
