--- a/src/main/webapp/style/default.css
+++ b/src/main/webapp/style/default.css
@@ -31,6 +31,16 @@ body {
   height: 40px;
 }
 
+#ajax {
+  position: absolute;
+  text-align: right;
+  top: 2px;
+  right: 3px;
+  width: 20px;
+  height: 20px;
+  display: none;
+}
+
 .buttonBar {
   float: right;
 }
