--- a/src/main/webapp/style/menu.css
+++ b/src/main/webapp/style/menu.css
@@ -8,6 +8,16 @@ div.xw_menubar {
   color: #000;
 }
 
+div.xw_popupmenu {
+  background-color: #eeeeee;  
+  padding: 1px 4px 1px 4px;
+  outline: 1px solid #ddd;
+  border-top: 1px solid #fff;
+  height: 22px;
+  margin-bottom: 4px;
+  color: #000;
+}
+
 div.xw_menuitem {
   float: left;
   border: 1px solid transparent;
