--- a/src/main/webapp/style/default.css
+++ b/src/main/webapp/style/default.css
@@ -31,6 +31,11 @@ body {
   height: 40px;
 }
 
+#auth {
+  float: right;
+  margin-right: 26px;
+}
+
 #ajax {
   position: absolute;
   text-align: right;
@@ -50,6 +55,7 @@ body {
   width: 142px;
   height: 40px;
   position: relative;
+  float: left;
 }
 
 div#ide {
