--- a/src/main/webapp/style/default.css
+++ b/src/main/webapp/style/default.css
@@ -1,23 +1,5 @@
-@font-face {
-    font-family: 'abeatbyKaiRegular';
-    src: url('abeatbykairegular-webfont.eot');
-    src: url('abeatbykairegular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('abeatbykairegular-webfont.woff') format('woff'),
-         url('abeatbykairegular-webfont.ttf') format('truetype'),
-         url('abeatbykairegular-webfont.svg#abeatbyKaiRegular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
 html, body {
   height: 100%;
-}
-
-h2 {
-  font-family: "abeatbyKaiRegular", sans-serif;
-  font-size: 25px;
-  letter-spacing: 6px;
-  color: #653c1b;  
 }
 
 body { 
@@ -33,7 +15,15 @@ body {
 
 #auth {
   float: right;
-  margin-right: 26px;
+  margin-top: 4px;
+  margin-right: 32px;
+}
+
+#auth a, #auth a:visited, #auth a:hover {
+  margin-left: 12px;
+  font-family: sans-serif;
+  text-decoration: none;
+  font-size: 0.8em;
 }
 
 #ajax {
@@ -72,7 +62,7 @@ div#menu {
 
 /* Command UI popup window styles */
 
-.forgeUI {
+.popupUI {
   background-color: #ffffff;
   overflow: auto;
   position: absolute;
@@ -81,8 +71,12 @@ div#menu {
   width: 100%; 
 }
 
-.forgeUI label {
+.popupUI label {
   font-size: 75%;
+}
+
+.popupUI p {
+  margin-left: 8px;
 }
 
 .popupFooter {
@@ -118,11 +112,6 @@ div.xwPopupWindow  {
   -moz-border-radius:12px;
   border-radius:12px;
   padding: 0px;
-}
-
-div.xwPopupContent {
-  
-
 }
 
 div.xwPopupTitle {
