--- a/src/main/webapp/style/default.css
+++ b/src/main/webapp/style/default.css
@@ -162,6 +162,35 @@ div.ace_editor {
   z-index: 3;
 }
 
+.important_message {
+  display: table;
+  width: 95%;
+  position: fixed;
+  margin-top: 20px;
+}
+
+.important_message div {
+  width: 95%;
+  margin-left: auto;
+  margin-right: auto;
+  height: 200px;
+  border: 3px solid #aaaaaa;
+  -moz-border-radius: 12px;
+  -webkit-border-radius: 12px;
+  border-radius: 12px;
+  box-shadow: 7px 7px 5px #cccccc;
+  text-align: center;
+  font-size: 120%;
+  color: #aaaaaa;
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.important_message a, a:visited {
+  text-decoration: none;
+  color: #5555ff
+}
+
 .project_search input {
   font-size: 75%;
   padding: 4px 6px 4px 24px;
